--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <div id="notification" class="notification"></div>
 
   <script>
-    const API_URL = 'https://giftup-backend.onrender.com/api';
+    const API_URL = 'https://giftup-pronti.onrender.com/api';
 
     function showNotification(message) {
       const notification = document.getElementById("notification");
